--- a/src/components/IsNumberPalindrome.module.scss
+++ b/src/components/IsNumberPalindrome.module.scss
@@ -1,5 +1,5 @@
 .title {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: bold;
   color: #ffffff;
   margin: 0;
@@ -45,27 +45,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
 
-.resultVowels {
-  font-size: 2.5rem;
-  font-weight: bold;
-  color: #ffffff;
-  margin: 0;
-  margin-bottom: 20px;
-  margin-right: 20px;
-  color: #7237ca;
-  padding-right: 20px;
-  border-right: 3px solid #f1f1f1;
-}
 
-.resultConsonants {
-  font-size: 2.5rem;
-  font-weight: bold;
-  color: #ffffff;
-  margin: 0;
-  margin-bottom: 20px;
-  display: inline-block;
-  color: #3d5201;
-}
+  .isPlaindromeStatus {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #ffffff;
+    margin: 0;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    color: #7237ca;
+  }
 
+}
