--- a/src/components/CountVowelsInString.module.scss
+++ b/src/components/CountVowelsInString.module.scss
@@ -57,6 +57,7 @@
   color: #7237ca;
   padding-right: 20px;
   border-right: 3px solid #f1f1f1;
+  text-align: center;
 }
 
 .resultConsonants {
@@ -67,6 +68,7 @@
   margin-bottom: 20px;
   display: inline-block;
   color: #3d5201;
+  text-align: center;
 }
 }
 
